--- a/src/main/resources/static/web/css/modern-business.css
+++ b/src/main/resources/static/web/css/modern-business.css
@@ -99,3 +99,51 @@ a, a:hover {
 .trang_thai p * {
 	color: white;
 }
+
+
+.tapphim{
+	background-color: black;
+	color:white;
+	font-weight:bold;
+	font-size:17px;
+	border-radius: 0;
+	padding: 0.5rem 1rem;
+	font-family: arial ;
+}
+
+.tapphim:hover{
+	background: #ff9601;
+}
+
+
+
+
+.tapphim:first-child {
+    border-top-left-radius: 0rem;
+    border-top-right-radius: 0rem;
+}
+
+
+.tapphim:last-child {
+    margin-bottom: 0;
+    border-bottom-right-radius: 0rem;
+    border-bottom-left-radius: 0rem;
+}
+
+.tapphim_active{
+	background-color: #ff9601;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
