--- a/src/main/resources/templates/web/template/menu.html
+++ b/src/main/resources/templates/web/template/menu.html
@@ -39,59 +39,57 @@
 						MỚI</a></li>
 
 
-				<li class="nav-item" data-toggle="modal" data-target="#exampleModal">
-
-					<div class="modal fade" id="exampleModal" tabindex="-1"
-						role="dialog" aria-labelledby="exampleModalLabel"
-						aria-hidden="true">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content text-dark">
-								<div class="modal-header">
-									<h5 style="padding-left: 120px;" class="modal-title "
-										id="exampleModalLabel">Đăng nhập tài khoản</h5>
-									<button type="button" class="close" data-dismiss="modal"
-										aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-								<div class="modal-body">
-
-									<form th:action="@{/dang-nhap}" method="post">
-
-										<div class="form-group">
-											<label for="exampleInputEmail1">Email</label> <input
-												type="text" name="email" class="form-control"
-												id="exampleInputEmail1" placeholder="Nhập email">
-
-										</div>
-										<div class="form-group">
-											<div>
-												<label for="exampleInputPassword1">Mật khẩu</label> <input
-													type="password" class="form-control" name="password"
-													id="exampleInputPassword1" placeholder="Nhập mật khẩu">
-											</div>
-											<a href="#" class="text-primary mt-2">Quyên mật khẩu</a>
-										</div>
-										<div class="form-group form-check">
-											<input type="checkbox" class="form-check-input"
-												id="exampleCheck1"> <label class="form-check-label"
-												for="exampleCheck1">Nhớ tên tài khoản</label>
 
 
-										</div>
-
-										<div class="form-group d-flex justify-content-center">
-											<button type="submit" class="btn btn-outline-success">Đăng
-												nhập</button>
-										</div>
-
-
-									</form>
-								</div>
-
+				<div class="modal fade" id="exampleModal" tabindex="-1"	role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content text-dark">
+							<div class="modal-header">
+								<h5 style="padding-left: 120px;" class="modal-title "
+									id="exampleModalLabel">Đăng nhập tài khoản</h5>
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
 							</div>
+							<div class="modal-body">
+
+								<form th:action="@{/dang-nhap}" method="post">
+
+									<div class="form-group">
+										<label for="exampleInputEmail1">Email</label> <input
+											type="text" name="email" class="form-control"
+											id="exampleInputEmail1" placeholder="Nhập email">
+
+									</div>
+									<div class="form-group">
+										<div>
+											<label for="exampleInputPassword1">Mật khẩu</label> <input
+												type="password" class="form-control" name="password"
+												id="exampleInputPassword1" placeholder="Nhập mật khẩu">
+										</div>
+										<a href="#" class="text-primary mt-2">Quyên mật khẩu</a>
+									</div>
+									<div class="form-group form-check">
+										<input type="checkbox" class="form-check-input"
+											id="exampleCheck1"> <label class="form-check-label"
+											for="exampleCheck1">Nhớ tên tài khoản</label>
+
+
+									</div>
+
+									<div class="form-group d-flex justify-content-center">
+										<button type="submit" class="btn btn-outline-success">Đăng
+											nhập</button>
+									</div>
+
+
+								</form>
+							</div>
+
 						</div>
-					</div></li>
+					</div>
+				</div>
 
 
 				<li class="nav-item">
@@ -108,23 +106,22 @@
 
 
 
+
+
 				<li class="nav-item dropdown"><a
 					class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog"
 					data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-					title="Đăng nhập/Đăng xuất"> <i class="fas fa-sign-in-alt"></i>
+					title="Đăng nhập/Đăng xuất"><i class="fas fa-sign-in-alt"></i>
 				</a>
 					<div class="dropdown-menu dropdown-menu-right"
 						aria-labelledby="navbarDropdownBlog">
-						<a th:if="${#request.isUserInRole('ADMIN')}" class="dropdown-item" th:href="@{/admin}">ADMIN
-						</a>
-						
-						<a th:if="${#request.userPrincipal != null}" class="dropdown-item" th:href="@{/dang-xuat}">ĐĂNG XUẤT
-						</a>
-						
-						<a th:if="${#request.userPrincipal == null}" class="dropdown-item"
-							data-toggle="modal" data-target="#exampleModal" href="#">ĐĂNG NHẬP
-						</a>
-						
+						<a th:if="${#request.isUserInRole('ADMIN')}" class="dropdown-item"
+							th:href="@{/admin}">ADMIN </a> <a
+							th:if="${#request.userPrincipal != null}" class="dropdown-item"
+							th:href="@{/dang-xuat}">ĐĂNG XUẤT </a> <a
+							th:if="${#request.userPrincipal == null}" class="dropdown-item"
+							data-toggle="modal" data-target="#exampleModal" href="#">ĐĂNG
+							NHẬP </a>
 					</div></li>
 			</ul>
 
