--- a/src/main/resources/templates/admin/template/head.html
+++ b/src/main/resources/templates/admin/template/head.html
@@ -24,9 +24,11 @@
 .them_phim .form-group {
 	margin-bottom: 0px;
 }
-<link th:href="@{/admin/css/colors_default.css}" id="theme"
-	rel="stylesheet">
 	
 
 </style>
+
+
+<link th:href="@{/admin/css/colors_default.css}" id="theme"	rel="stylesheet">
+
 </head>
