--- a/src/main/resources/templates/web/template/footer.html
+++ b/src/main/resources/templates/web/template/footer.html
@@ -1,4 +1,5 @@
-<footer xmlns:th="http://www.thymeleaf.org" class="py-2" th:fragment="footer">
+<footer xmlns:th="http://www.thymeleaf.org" class="py-2"
+	th:fragment="footer">
 	<div class="container footer">
 		<div class="row">
 			<div class="col-md-4">
@@ -17,7 +18,7 @@
 
 					<div class="col-md-6">
 						<h5>Liên hệ</h5>
-						<small>Email: 16520254@gm.uit.edu.vn <br>
+						<small>Email: 16520479@gm.uit.edu.vn <br>
 							16520254@gm.uit.edu.vn
 						</small>
 					</div>
