--- a/src/main/resources/templates/web/template/slide.html
+++ b/src/main/resources/templates/web/template/slide.html
@@ -1,4 +1,4 @@
-<header th:fragment="slide">
+<header  xmlns:th="http://www.thymeleaf.org" th:fragment="slide">
 	<div id="carouselExampleIndicators" class="carousel slide"
 		data-ride="carousel">
 		<ol class="carousel-indicators">
