--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -5,15 +5,28 @@
 
 	<div id="wrapper">
 		<nav th:replace="admin/template/navbar::navbar"></nav>
-		<aside th:replace="admin/template/aside::aside" ></aside>
-		
-		
+		<aside th:replace="admin/template/aside::aside"></aside>
+
+
 		<div id="page-wrapper">
 			<div class="container-fluid">
-				<div class="row p-2">
-				
-			
-					<h4 th:text="${#request.userPrincipal}"></h4>
+				<div class="row p-2 home_page">
+					<div class="col col-md-4">
+						<div class="card mb-3">
+							<div class="card-body">
+								<a th:href="@{/admin/danh-sach-phim}" class="card-title" th:text="'TỔNG SỐ PHIM ' + ${totalMovie}"></a>
+							</div>
+						</div>
+					</div>
+					
+					<div class="col col-md-4">
+						<div class="card mb-3">
+							<div class="card-body">
+								<a href="#" class="card-title" th:text="'TỔNG SỐ TẬP PHIM ' + ${totalEpisode}"></a>
+							</div>
+						</div>
+					</div>
+
 				</div>
 
 			</div>
@@ -22,6 +35,6 @@
 			</div>
 		</div>
 	</div>
-	
+
 </body>
 </html>
