--- a/src/main/resources/templates/admin/template/navbar.html
+++ b/src/main/resources/templates/admin/template/navbar.html
@@ -2,21 +2,10 @@
 	class="fixed-top navbar navbar-default navbar-static-top m-b-0"
 	style="padding: 0px">
 	<div class="navbar-header">
-		<div class="top-left-part">
+		<div class="top-left-part d-flex justify-content-center align-items-center">
 			<!-- Logo -->
-			<a class="logo" th:href="@{/}"> <!-- Logo icon image, you can use font-icon also -->
-				<b> <!--This is dark logo icon--> <img
-					th:src="@{/admin/images/admin-logo.png}" alt="home"
-					class="dark-log/o" /> <!--This is light logo icon--> <img
-					th:src="@{/admin/images/admin-logo-dark.png}" alt="home"
-					class="light-logo" />
-			</b> <!-- Logo text image you can use text also --> <span
-				class="hidden-xs"> <!--This is dark logo text--> <img
-					th:src="@{/admin/images/admin-text.png}" alt="home"
-					class="dark-logo" /> <!--This is light logo text--> <img
-					th:src="@{/admin/images/admin-text-dark.png}" alt="home"
-					class="light-logo" />
-			</span>
+			<a class="logo" style="padding: 0px;" th:href="@{/admin}"> <!-- Logo icon image, you can use font-icon also -->
+				<img th:src="@{/images/logo/motphim.png}" width="160px" />
 			</a>
 		</div>
 		<!-- /Logo -->
@@ -27,8 +16,8 @@
 					<a href=""><i class="fa fa-search"></i></a>
 				</form>
 			</li>
-						
-			
+
+
 			<li><a class="profile-pic" th:href="@{/admin}"> <img
 					th:src="@{/admin/images/users/varun.jpg}" alt="user-img" width="36"
 					class="img-circle"><b class="hidden-xs">Steave</b></a></li>
