--- a/src/main/resources/templates/web/template/menu.html
+++ b/src/main/resources/templates/web/template/menu.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <nav class="navbar navbar-expand-lg menu" th:fragment="menu">
 	<div class="container">
@@ -41,7 +40,9 @@
 
 
 
-				<div class="modal fade" id="exampleModal" tabindex="-1"	role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal fade" id="exampleModal" tabindex="-1"
+					role="dialog" aria-labelledby="exampleModalLabel"
+					aria-hidden="true">
 					<div class="modal-dialog" role="document">
 						<div class="modal-content text-dark">
 							<div class="modal-header">
@@ -93,9 +94,10 @@
 
 
 				<li class="nav-item">
-					<form class="form-inline my-2 my-lg-0">
+					<form class="form-inline my-2 my-lg-0"
+						th:action="@{/tim-kiem-phim/}" method="post">
 						<input class="form-control" name="keyWord" type="search"
-							placeholder="Tìm kiếm" aria-label="Search">
+							placeholder="Tìm kiếm" aria-label="Search" th:value="${keyWord}">
 						<button class="btn btn-outline-light my-2 my-sm-0"
 							title="Tìm kiếm" type="submit">
 							<i class="fas fa-search"></i>
