--- a/src/main/resources/templates/web/movieDescription.html
+++ b/src/main/resources/templates/web/movieDescription.html
@@ -12,7 +12,7 @@
             <div class="col col-md-9 my-3">
                 <div class="row">
                     <div class="col col-md-5">
-                        <div class="card" style="border: none; background-color: black; width: 324.26px;" th:title="${movie.nameMovie}">
+                        <div class="card" style="border: none; background-color: black; width: 324.26px; cursor: pointer;" th:title="${movie.nameMovie}">
                             <div class="card-body">
                                 <a th:if="${#lists.size(movie.episodeSeriesList) == 0}" class="disabled"> <img width="324.26px" th:src="@{/images/movie/}+${movie.linkMovie}+.jpg" th:alt="${movie.nameMovie}">
                                 </a>
@@ -107,6 +107,15 @@
 
                         <div class="card border-0 border-white tom_tat_phim">
                             <div id="kq"></div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row" id="row_kq_null_trailer">
+                    <div class="col col-md-12">
+
+                        <div class="card border-0 border-white tom_tat_phim">
                             <div id="kq_null_trailer"></div>
                         </div>
                     </div>
@@ -148,7 +157,7 @@
                 });
 
                 $(".null_trailer").click(function() {
-                    $("#row_kq").addClass("my-3");
+                    $("#row_kq_null_trailer").addClass("my-3");
                     $("#kq_null_trailer")
                         .append(
                             "<h5>THÔNG BÁO</h5><p>Hiện tại phim chưa có trailer nào. Chúng tôi sẽ cập nhật nhanh nhất khi phim ra trailer mới</p>");
