--- a/src/main/resources/templates/web/playMovie.html
+++ b/src/main/resources/templates/web/playMovie.html
@@ -62,7 +62,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<h4 class="my-3 ml-3" th:text="${title}">PHIM MỚI CẬP NHẬT</h4>
+			<h4 class="my-3 ml-3">
+				<a style="color: #ff9601;" th:text="${title}" th:href="@{/phim/} + ${movie.linkMovie}">ten phim</a>
+			</h4>
 
 			<div class="col col-md-12">
 				<div class="d-flex flex-wrap">
