--- a/src/main/resources/templates/web/template/footer.html
+++ b/src/main/resources/templates/web/template/footer.html
@@ -1,34 +1,46 @@
-<footer xmlns:th="http://www.thymeleaf.org" class="py-2"
-	th:fragment="footer">
-	<div class="container footer">
-		<div class="row">
-			<div class="col-md-4">
-				<p>Lorem Ipsum is simply dummy text of the printing and
-					typesetting industry. Lorem Ipsum has been the industry's standard
-					dummy text ever since the 1500s, when an unknown printer took a
-					galley of type and scrambled it to make a type specimen book. It
-					has survived not only five centuries.</p>
-			</div>
-			<div class="col-md-4"></div>
-			<div class="col-md-4">
-				<div class="row">
-					<div class="col-md-6">
-						<h5>Điều khoản</h5>
-					</div>
+<footer xmlns:th="http://www.thymeleaf.org" class="py-2" th:fragment="footer">
+    <div class="container footer">
+        <div class="row">
+            <div class="col-md-4">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book. It has survived not only five centuries.</p>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5>Điều khoản</h5>
+                    </div>
 
-					<div class="col-md-6">
-						<h5>Liên hệ</h5>
-						<small>Email: 16520479@gm.uit.edu.vn <br>
+                    <div class="col-md-6">
+                        <h5>Liên hệ</h5>
+                        <small>Email: 16520479@gm.uit.edu.vn <br>
 							16520254@gm.uit.edu.vn
 						</small>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- /.container -->
-	<!-- Bootstrap core JavaScript -->
-	<script th:src="@{web/js/jquery.min.js}"></script>
-	<script th:src="@{web/js/bootstrap.bundle.min.js}"></script>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
+    <!-- Bootstrap core JavaScript -->
+    <script th:src="@{web/js/jquery.min.js}"></script>
+    <script th:src="@{web/js/bootstrap.bundle.min.js}"></script>
+    <script>
+        $(document).ready(function() {
+            var d = new Date();
+            var temp = d.getFullYear();
+            var year = parseInt(temp);
+            $(".nam_sx").append("<a href='/phim-moi/" + year + "' class='dropdown-item' >Phim " + year + "</a>");
+            $(".nam_sx").append("<a href='/phim-moi/" + (year - 1) + "' class='dropdown-item' >Phim " + (year - 1) + "</a>");
+            $(".nam_sx").append("<a href='/phim-moi/" + (year - 2) + "' class='dropdown-item' >Phim " + (year - 2) + "</a>");
+            $(".nam_sx").append("<a href='/phim-moi/" + (year - 3) + "' class='dropdown-item' >Phim " + (year - 3) + "</a>");
+            $(".nam_sx").append("<a href='/phim-moi/" + (year - 4) + "' class='dropdown-item' >Phim " + (year - 4) + "</a>");
+            $(".nam_sx").append("<a href='/phim-moi/" + (year - 5) + "' class='dropdown-item' >Phim " + (year - 5) + "</a>");
+
+
+        });
+    </script>
+
 
 </footer>
