--- a/src/main/resources/templates/web/template/head.html
+++ b/src/main/resources/templates/web/template/head.html
@@ -15,5 +15,20 @@
 <!-- <link rel="stylesheet"
 	href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"> -->
 
+<style type="text/css">
+.img_movie {
+	position: relative;
+}
 
+.text_block {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	font-weight: 500;
+	background-color: #696969;
+	color: white;
+	padding-left: 0px;
+	padding-right: 0px;
+}
+</style>
 </head>
