--- a/src/main/resources/templates/admin/template/aside.html
+++ b/src/main/resources/templates/admin/template/aside.html
@@ -3,7 +3,9 @@
 	<div class="sidebar-nav slimscrollsidebar">
 		<div style="height: 60px; color: white;"
 			class="d-flex justify-content-center align-items-center">
-			<img th:src="@{/images/logo/motphim.png}" width="160px" />
+			<a th:href="@{/admin}">
+				<img th:src="@{/images/logo/motphim.png}" width="160px" />
+			</a>
 		</div>
 		<ul class="nav" id="side-menu" style="border-top: 1px solid #454d55;">
 
