--- a/src/main/resources/templates/admin/addNewMovie.html
+++ b/src/main/resources/templates/admin/addNewMovie.html
@@ -5,14 +5,59 @@
 
 <head>
 
-<style type="text/css">
-.thumb-image {
-	/* width: 200px; */
-	padding: 5px 0px;
-	max-height: 200px;
-	min-height: 200px;
-}
-</style>
+	<style type="text/css">
+		.thumb-image {
+			/* width: 200px; */
+			padding: 5px 0px;
+			max-height: 200px;
+			min-height: 200px;
+		}
+
+		.autocomplete-suggestions {
+			background-color: white;
+			color: black;
+			border: 1px solid black;
+			border-top: none;
+		}
+
+		.autocomplete-suggestion {
+			padding: 6px 10px;
+		}
+
+		.autocomplete-suggestion:hover {
+			background-color: #eee;
+			cursor: pointer;
+		}
+
+		.form_search {
+			position: relative;
+		}
+
+		#btnThem {
+			position: absolute;
+			top: 0px;
+			right: 0px;
+			font-weight: 500;
+			height: 38px;
+			line-height: 38px;
+			cursor: pointer;
+			background-color: #343a40;
+			padding: 0px 12px;
+			color: white;
+		}
+
+		.btnXoa {
+			background: #ea1227;
+			border-color: #dc3545;
+			color: white;
+			font-weight: 400;
+
+		}
+
+		.btn:hover {
+			color: white;
+		}
+	</style>
 </head>
 
 <body>
@@ -27,21 +72,20 @@
 				<div class="row">
 
 					<div class="col col-md-12" style="background-color: white;">
-						<h5
-							style="font-size: 32px; font-weight: 400;">THÊM
-							PHIM MỚI</h5>
-						<form th:action="@{/admin/add-new-film}" method="post"
-							th:object="${movie}" enctype="multipart/form-data">
+						<h5 style="font-size: 32px; font-weight: 400;">THÊM PHIM MỚI</h5>
+						<form th:action="@{/admin/add-new-film}" method="post" th:object="${movie}"
+							enctype="multipart/form-data">
 							<div class="form-row">
 								<div class="col-md-4 mb-3">
 									<div class="form-group">
-										<label for="newFilm">Tên phim</label> <input
-											th:field="*{nameMovie}" type="text" class="form-control"
-											id="newFilm" aria-describedby="emailHelp"
+										<label for="newFilm">Tên phim</label> <input th:field="*{nameMovie}" type="text"
+											class="form-control" id="newFilm" aria-describedby="emailHelp"
 											placeholder="Nhập tên phim">
 
 									</div>
 								</div>
+
+
 
 							</div>
 
@@ -70,7 +114,6 @@
 											<option value="2017">Năm 2017</option>
 											<option value="2016">Năm 2016</option>
 
-
 										</select>
 									</div>
 								</div>
@@ -78,11 +121,11 @@
 								<div class="col-md-4 mb-3">
 									<div class="form-group">
 										<label for="exampleFormControlSelect1">Quốc gia sản
-											xuất</label> <select class="form-control"
-											id="exampleFormControlSelect1" name="countryId">
+											xuất</label> <select class="form-control" id="exampleFormControlSelect1"
+											name="countryId">
 
-											<option th:each="c : ${countryList}"
-												th:value="${c.idCountry}" th:text="${c.nameCountry}">Viá»‡t
+											<option th:each="c : ${countryList}" th:value="${c.idCountry}"
+												th:text="${c.nameCountry}">Viá»‡t
 												Nam</option>
 										</select>
 									</div>
@@ -98,11 +141,9 @@
 									<div class="row">
 										<div th:each="c : ${categorys}" class="col-md-4 mb-3">
 											<div class="custom-control custom-checkbox">
-												<input type="checkbox" name="category"
-													th:value="${c.idCategory}"
-													class="custom-control-input col-md-4 mb-3"
-													th:id="${c.idCategory}"> <label
-													class="custom-control-label" th:for="${c.idCategory}"
+												<input type="checkbox" name="category" th:value="${c.idCategory}"
+													class="custom-control-input col-md-4 mb-3" th:id="${c.idCategory}">
+												<label class="custom-control-label" th:for="${c.idCategory}"
 													th:text="${c.nameCategory}">Check this custom
 													checkbox</label>
 											</div>
@@ -116,8 +157,8 @@
 							<div class="form-row">
 								<div class="col-md-4 mb-3">
 									<div class="form-group">
-										<label for="soTap">Số tập</label> <input type="number"
-											class="form-control" id="soTap" aria-describedby="abc"
+										<label for="soTap">Số tập</label> <input type="number" class="form-control"
+											id="soTap" th:field="*{numberEpisodeMovie}" aria-describedby="abc"
 											placeholder="Nhập số tập phim">
 
 									</div>
@@ -125,13 +166,29 @@
 
 							</div>
 
+
+							<div class="form-row">
+								<div class="col-md-4 mb-3">
+									<div class="form-group form_search">
+										<input type="search" id="w-input-search" class="form-control value_actor"
+											placeholder="Tìm kiếm diễn viên">
+										<div id="btnThem">Thêm diễn viên</div>
+									</div>
+								</div>
+								<div class="col-md-8" id="kq_addActor">
+
+								</div>
+
+							</div>
+
+							<div id="them_dien_vien"></div>
+
 							<div class="form-row">
 								<div class="col-md-12">
 									<div class="form-group">
 										<label for="noidungphim">Nội dung phim</label>
-										<textarea placeholder="Nhập nội dung phim"
-											class="form-control" th:field="*{content}" id="noidungphim"
-											rows="8"></textarea>
+										<textarea placeholder="Nhập nội dung phim" class="form-control"
+											th:field="*{content}" id="noidungphim" rows="8"></textarea>
 									</div>
 								</div>
 							</div>
@@ -139,9 +196,8 @@
 							<div class="form-row">
 								<div class="col-md-4 mb-3">
 									<div class="form-group">
-										<label for="imgFile">Ảnh đại diện</label> <input
-											th:field="*{avatar}" type="file" class="form-control-file"
-											name="imgFile" id="fileUploadAvatar">
+										<label for="imgFile">Ảnh đại diện</label> <input th:field="*{avatar}"
+											type="file" class="form-control-file" name="imgFile" id="fileUploadAvatar">
 
 										<div id="imageAvatar"></div>
 
@@ -151,9 +207,8 @@
 
 								<div class="col-md-4 mb-3">
 									<div class="form-group">
-										<label for="imgFile">Ảnh slide (Tùy chọn)</label> <input
-											th:field="*{slideImg}" type="file" class="form-control-file"
-											name="imgFile" id="fileUploadSlide">
+										<label for="imgFile">Ảnh slide (Tùy chọn)</label> <input th:field="*{slideImg}"
+											type="file" class="form-control-file" name="imgFile" id="fileUploadSlide">
 										<div id="imageSlide"></div>
 									</div>
 								</div>
@@ -180,100 +235,230 @@
 
 </body>
 
+
+
+<script th:src="@{/admin/js/jquery.autocomplete.min.js}"></script>
+
+
+<script>
+	$(document).ready(function () {
+		var mapDienVien = [];
+
+
+		$('#w-input-search').autocomplete({
+			serviceUrl: '/api/search-actor',
+			paramName: "keyWord",
+			delimiter: ",",
+
+			transformResult: function (data) {
+				console.log(data);
+				return {
+					suggestions: $.map($.parseJSON(data), function (item) {
+						return {
+							value: item.nameActor,
+							data: item.idActor,
+						};
+					
+					})
+
+				};
+				
+
+			},
+
+			onSelect: function (suggestion) {
+
+
+				$("#btnThem").click(function () {
+					var ten = suggestion.value;
+					var check = checkExist(ten, mapDienVien);
+
+					console.log(check);
+					if (check == true) {
+						var dienvien = { ten: suggestion.value, maso: suggestion.data };
+						mapDienVien.push(dienvien);
+
+						console.log(mapDienVien);
+						createTable(mapDienVien);
+						$(".btnXoa").click(function () {
+							console.log(mapDienVien);
+							var id = $(this).prop('id');
+							console.log("id " + id);
+							deleteInMapDienVien(id, mapDienVien);
+							createTable(mapDienVien);
+						});
+
+
+
+					}
+
+				});
+
+
+
+				function deleteInMapDienVien(id, mapDienVien) {
+					for (var i = 0; i < mapDienVien.length; i++) {
+						if (id == mapDienVien[i].maso) {
+							mapDienVien.splice(i, 1);
+						}
+					}
+				}
+
+				function checkExist(ten, mapDienVien) {
+					if (mapDienVien.length < 1) {
+						return true;
+					}
+					for (var i = 0; i < mapDienVien.length; i++) {
+						if (ten === mapDienVien[i].ten) {
+							return false;
+						}
+					}
+					return true;
+				}
+
+				function createTable(mapDienVien) {
+					if (mapDienVien.length < 1) {
+						$("#kq_addActor").html("");
+					} else {
+						var table = "<table class='table table-hover table-bordered'>"
+							+ "<thead class='thead-dark'>"
+							+ "<tr>"
+							+ "	<th>STT</th>"
+							+ "	<th>Tên diễn viên</th>"
+							+ "<th>Xóa khỏi danh sách</th>"
+							+ "</tr>"
+							+ "</thead>"
+							+ "<tbody>";
+
+						for (var i = 0; i < mapDienVien.length; i++) {
+							table += "<tr>"
+								+ "	<th>" + (i + 1) + "</th>"
+								+ "	<td>" + mapDienVien[i].ten + "</td>"
+								+ "	<td>"
+								+ " <button type='button' id='" + mapDienVien[i].maso + "'  class='btn btn - danger btnXoa'>Xóa diễn viên</button>"
+								+ "</td >"
+								+ "</tr>";
+						}
+
+
+						table += "</tbody>"
+							+ "</table>";
+
+
+						$("#kq_addActor").html(table);
+					}
+
+
+				}
+
+
+
+
+				//alert('You selected: ' + suggestion.value + ', ' + suggestion.data);
+			}
+
+		});
+
+
+	});
+</script>
+
 <script>
 	$(document)
-			.ready(
-					function() {
-						$("#fileUploadAvatar")
-								.on(
-										'change',
-										function() {
-											//Get count of selected files
-											var countFiles = $(this)[0].files.length;
-											var imgPath = $(this)[0].value;
-											var extn = imgPath
-													.substring(
-															imgPath
-																	.lastIndexOf('.') + 1)
-													.toLowerCase();
-											var image_holder = $("#imageAvatar");
-											image_holder.empty();
-											if (extn == "gif" || extn == "png"
-													|| extn == "jpg"
-													|| extn == "jpeg") {
-												if (typeof (FileReader) != "undefined") {
-													//loop for each file selected for uploaded.
-													for (var i = 0; i < countFiles; i++) {
-														var reader = new FileReader();
-														reader.onload = function(
-																e) {
-															$(
-																	"<img />",
-																	{
-																		"src" : e.target.result,
-																		"class" : "thumb-image"
-																	})
-																	.appendTo(
-																			image_holder);
-														}
-														image_holder.show();
-														reader
-																.readAsDataURL($(this)[0].files[i]);
-													}
-												}
-											}
+		.ready(
+			function () {
+				$("#fileUploadAvatar")
+					.on(
+						'change',
+						function () {
+							// Get count of selected files
+							var countFiles = $(this)[0].files.length;
+							var imgPath = $(this)[0].value;
+							var extn = imgPath
+								.substring(
+									imgPath
+										.lastIndexOf('.') + 1)
+								.toLowerCase();
+							var image_holder = $("#imageAvatar");
+							image_holder.empty();
+							if (extn == "gif" || extn == "png"
+								|| extn == "jpg"
+								|| extn == "jpeg") {
+								if (typeof (FileReader) != "undefined") {
+									// loop for each file
+									// selected for uploaded.
+									for (var i = 0; i < countFiles; i++) {
+										var reader = new FileReader();
+										reader.onload = function (
+											e) {
+											$(
+												"<img />",
+												{
+													"src": e.target.result,
+													"class": "thumb-image"
+												})
+												.appendTo(
+													image_holder);
+										}
+										image_holder.show();
+										reader
+											.readAsDataURL($(this)[0].files[i]);
+									}
+								}
+							}
 
-										});
-					});
+						});
+			});
 </script>
 
 
 
 <script>
 	$(document)
-			.ready(
-					function() {
-						$("#fileUploadSlide")
-								.on(
-										'change',
-										function() {
-											//Get count of selected files
-											var countFiles = $(this)[0].files.length;
-											var imgPath = $(this)[0].value;
-											var extn = imgPath
-													.substring(
-															imgPath
-																	.lastIndexOf('.') + 1)
-													.toLowerCase();
-											var image_holder = $("#imageSlide");
-											image_holder.empty();
-											if (extn == "gif" || extn == "png"
-													|| extn == "jpg"
-													|| extn == "jpeg") {
-												if (typeof (FileReader) != "undefined") {
-													//loop for each file selected for uploaded.
-													for (var i = 0; i < countFiles; i++) {
-														var reader = new FileReader();
-														reader.onload = function(
-																e) {
-															$(
-																	"<img />",
-																	{
-																		"src" : e.target.result,
-																		"class" : "thumb-image"
-																	})
-																	.appendTo(
-																			image_holder);
-														}
-														image_holder.show();
-														reader
-																.readAsDataURL($(this)[0].files[i]);
-													}
-												}
-											}
+		.ready(
+			function () {
+				$("#fileUploadSlide")
+					.on(
+						'change',
+						function () {
+							// Get count of selected files
+							var countFiles = $(this)[0].files.length;
+							var imgPath = $(this)[0].value;
+							var extn = imgPath
+								.substring(
+									imgPath
+										.lastIndexOf('.') + 1)
+								.toLowerCase();
+							var image_holder = $("#imageSlide");
+							image_holder.empty();
+							if (extn == "gif" || extn == "png"
+								|| extn == "jpg"
+								|| extn == "jpeg") {
+								if (typeof (FileReader) != "undefined") {
+									// loop for each file
+									// selected for uploaded.
+									for (var i = 0; i < countFiles; i++) {
+										var reader = new FileReader();
+										reader.onload = function (
+											e) {
+											$(
+												"<img />",
+												{
+													"src": e.target.result,
+													"class": "thumb-image"
+												})
+												.appendTo(
+													image_holder);
+										}
+										image_holder.show();
+										reader
+											.readAsDataURL($(this)[0].files[i]);
+									}
+								}
+							}
 
-										});
-					});
+						});
+			});
 </script>
 
 </html>
